[gd_scene load_steps=7 format=2]

[ext_resource path="res://Shape File/Shape.gd" type="Script" id=1]
[ext_resource path="res://Script/ScreenDrag.gd" type="Script" id=2]
[ext_resource path="res://Sprite/circle_icon.png" type="Texture" id=3]
[ext_resource path="res://Sprite/icon.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Shape" type="Area2D" groups=["shapes"]]
script = ExtResource( 1 )

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="RectangleSprite" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 4 )

[node name="CircleSprite" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="TouchScreenClass" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
shape_centered = false
script = ExtResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Shape_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Shape_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Shape_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Shape_mouse_exited"]
